# Edge2A

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/frontend/: package-lock.json  package.json
demo/frontend/public/: index.html
demo/frontend/src/: app.jsx  index.js
src/: CMakeLists.txt  common.hpp  edge.hpp  graph.cpp  graph.hpp  graphUtils.cpp  graphdb.cpp  graphdb.hpp  graphdbTx.cpp  graphdbio.cpp  main.cpp  match.hpp  matcher.cpp  matcher.hpp  node.hpp
src/bptree/: bptree.hpp  bptree.tpp  bptreeIterator.hpp  treenode.hpp
src/parser/: CMakeLists.txt  lexer.l  parser.cpp  parser.hpp  parser.y
test/: CMakeLists.txt  TestA.cpp
tests/: CMakeLists.txt  TestA.cpp  TestBPTree.cpp  TestIO.cpp  TestMatching.cpp  TestMatchingVF2.cpp  TestParsing.cpp  TestTransaction.cpp
